--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <style>
     .video-container {
-        width: 100%;
-        max-width: 680px;
+        /* width: 100%; */
+        max-width: 600px;
+        height: 800px;
         margin: auto;
         position: relative;
         background: #000;
+    }
+
+    .main-container {
+        width: 100%;
+        height: 100vh;
+        background-color: pink;
     }
 
     video {
@@ -38,23 +45,17 @@
     }
 </style>
 
-<div class="video-container">
-    <video id="myVideo" playsinline webkit-playsinline preload="metadata" autoplay
-        poster="https://mdn.alipayobjects.com/huamei_mrdrkc/afts/img/9ehrQ4G789MAAAAAgBAAAAgADnRDAQFr/original">
-        <source src="https://gw.alipayobjects.com/v/huamei_mrdrkc/afts/video/V5eFTZ0SOvsAAAAAVNAAAAgAfoeUAQBr"
-            type="video/mp4">
-    </video>
-    <!-- 
-    <div class="controls">
-        <button id="playBtn">▶︎</button>
-
-        <input type="range" id="progress" min="0" max="100" value="0">
-
-        <input type="range" id="volume" min="0" max="1" step="0.01" value="1">
-
-        <button id="fullBtn">⛶</button>
-    </div> -->
+<div class="main-container">
+    <h1>hello test</h1>
+    <div class="video-container">
+        <video id="myVideo" playsinline webkit-playsinline preload="metadata" autoplay
+            poster="https://mdn.alipayobjects.com/huamei_mrdrkc/afts/img/9ehrQ4G789MAAAAAgBAAAAgADnRDAQFr/original">
+            <source src="https://gw.alipayobjects.com/v/huamei_mrdrkc/afts/video/V5eFTZ0SOvsAAAAAVNAAAAgAfoeUAQBr"
+                type="video/mp4">
+        </video>
+    </div>
 </div>
+
 
 <script>
     const video = document.getElementById("myVideo");
