--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 </style>
 
 <div class="main-container">
-    <h1>hello test</h1>
+    <h1>hello test 21:50</h1>
     <div class="video-container">
-        <video id="myVideo" playsinline webkit-playsinline preload="metadata" autoplay
+        <video id="myVideo" playsinline webkit-playsinline autoplay x5-video-player-type="h5"
             poster="https://mdn.alipayobjects.com/huamei_mrdrkc/afts/img/9ehrQ4G789MAAAAAgBAAAAgADnRDAQFr/original">
             <source src="https://gw.alipayobjects.com/v/huamei_mrdrkc/afts/video/V5eFTZ0SOvsAAAAAVNAAAAgAfoeUAQBr"
                 type="video/mp4">
