--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
         margin: auto;
         position: relative;
         background: #000;
+        position: absolute;
+        z-index: 100;
     }
 
     .main-container {
         width: 100%;
         height: 100vh;
         background-color: pink;
+        position: relative;
     }
 
     video {
@@ -46,7 +49,7 @@
 </style>
 
 <div class="main-container">
-    <h1>hello test 22:06</h1>
+    <h1>hello test 22:08</h1>
     <div class="video-container">
         <video id="myVideo" playsinline webkit-playsinline="true" autoplay loop
             poster="https://mdn.alipayobjects.com/huamei_mrdrkc/afts/img/9ehrQ4G789MAAAAAgBAAAAgADnRDAQFr/original">
