--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 </style>
 
 <div class="main-container">
-    <h1>hello test 22:10</h1>
+    <h1>hello test 22:12</h1>
     <div class="background-container">
         <div class="video-container">
-            <video id="myVideo" playsinline webkit-playsinline="true" autoplay loop
+            <video id="myVideo" playsinline webkit-playsinline autoplay loop
                 poster="https://mdn.alipayobjects.com/huamei_mrdrkc/afts/img/9ehrQ4G789MAAAAAgBAAAAgADnRDAQFr/original">
                 <source src="https://gw.alipayobjects.com/v/huamei_mrdrkc/afts/video/V5eFTZ0SOvsAAAAAVNAAAAgAfoeUAQBr"
                     type="video/mp4">
