--- a/index.html
+++ b/index.html
@@ -11,21 +11,27 @@
     }
 
     .background-container {
-        position: absolute;
+        position: relative;
         overflow: hidden;
         background-color: green;
         padding: 12px;
         width: 624px;
         height: 824px;
         border: 20px solid blue;
-        z-index: 100;
     }
 
     .main-container {
         width: 100%;
         height: 100vh;
         background-color: pink;
-        position: relative;
+    }
+
+    .video-backImg {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        z-index: 100;
+        position: absolute;
     }
 
     video {
@@ -60,8 +66,9 @@
 </style>
 
 <div class="main-container">
-    <h1>hello test 22:12</h1>
+    <h1>hello test 22:20</h1>
     <div class="background-container">
+        <div class="video-backImg"></div>
         <div class="video-container">
             <video id="myVideo" playsinline webkit-playsinline autoplay loop
                 poster="https://mdn.alipayobjects.com/huamei_mrdrkc/afts/img/9ehrQ4G789MAAAAAgBAAAAgADnRDAQFr/original">
