--- a/index2.html
+++ b/index2.html
@@ -153,11 +153,11 @@
                 poster="https://mdn.alipayobjects.com/huamei_mrdrkc/afts/img/9ehrQ4G789MAAAAAgBAAAAgADnRDAQFr/original"
                 aria-hidden="false">
                 <!-- 请替换下面的 src 为你自己的文件（优先 mp4/h264 + webm） -->
-                <source src="https://gw.alipayobjects.com/v/huamei_mrdrkc/afts/video/V5eFTZ0SOvsAAAAAVNAAAAgAfoeUAQBr"
+                <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4"
                     type="video/mp4; codecs=\" avc1.42E01E, mp4a.40.2\"">
                 <source src="video.webm" type="video/webm; codecs=\" vp8, vorbis\"">
                 <!-- 浏览器不支持 video 时的替代内容 -->
-                您的浏览器不支持内嵌视频。请更新浏览器或使用支持 HTML5 的浏览器。
+                2056您的浏览器不支持内嵌视频。请更新浏览器或使用支持 HTML5 的浏览器。
             </video>
 
             <!-- 简单的覆盖层：用于放 CTA、logo 等 -->
