--- a/index2.html
+++ b/index2.html
@@ -153,21 +153,20 @@
                 poster="https://mdn.alipayobjects.com/huamei_mrdrkc/afts/img/9ehrQ4G789MAAAAAgBAAAAgADnRDAQFr/original"
                 aria-hidden="false">
                 <!-- 请替换下面的 src 为你自己的文件（优先 mp4/h264 + webm） -->
-                <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4"
-                    type="video/mp4; codecs=\" avc1.42E01E, mp4a.40.2\"">
-                <source src="video.webm" type="video/webm; codecs=\" vp8, vorbis\"">
+                <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4" type="video/mp4">
+                <source src="video.webm" type="video/webm">
                 <!-- 浏览器不支持 video 时的替代内容 -->
-                2056您的浏览器不支持内嵌视频。请更新浏览器或使用支持 HTML5 的浏览器。
+                您的浏览器不支持内嵌视频。请更新浏览器或使用支持 HTML5 的浏览器。
             </video>
 
             <!-- 简单的覆盖层：用于放 CTA、logo 等 -->
-            <div class="media-overlay">
+            <!-- <div class="media-overlay">
                 <div class="cta">静音自动循环 / 兼容移动端</div>
-            </div>
+            </div> -->
         </div>
 
         <div class="content">
-            <p class="desc">这里是关于视频/封面的简短介绍。若设备或浏览器不允许自动播放视频，将显示为背景图。你可以把按钮链接到更多详情或跳转页面。</p>
+            <p class="desc">2056这里是关于视频/封面的简短介绍。若设备或浏览器不允许自动播放视频，将显示为背景图。你可以把按钮链接到更多详情或跳转页面。</p>
             <div class="actions">
                 <button class="btn primary" id="btnPlayToggle">播放/暂停（切换）</button>
                 <button class="btn ghost" id="btnDownload">下载封面</button>
