--- a/index2.html
+++ b/index2.html
@@ -142,6 +142,9 @@
 <body>
     <header>
         <h1>页面标题 — H5 视频兼容示例</h1>
+        <h1>页面标题 — H5 视频兼容示例</h1>
+        <h1>页面标题 — H5 视频兼容示例</h1>
+        <h1>页面标题 — H5 视频兼容示例</h1>
     </header>
 
     <section class="hero" aria-label="视频展示区域">
