--- a/index.html
+++ b/index.html
@@ -1,128 +1,158 @@
-<style>
-    .video-container {
-        /* width: 100%; */
-        max-width: 600px;
-        height: 1000px;
-        margin: auto;
-        position: relative;
-        background: #000;
-        position: absolute;
-        z-index: 99;
-    }
+<!DOCTYPE html>
+<html lang="zh-CN">
 
-    .background-container {
-        position: relative;
-        overflow: hidden;
-        background-color: green;
-        padding: 12px;
-        width: 624px;
-        height: 1024px;
-        border: 20px solid blue;
-    }
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
+    <title>竖屏 H5 视频示例 - 边框优化 + 安卓循环</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: system-ui, -apple-system, "Helvetica Neue", Arial;
+            background: #f6f7fb;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 20px;
+        }
 
-    .main-container {
-        width: 100%;
-        height: 100vh;
-        background-color: pink;
-    }
+        header {
+            width: 100%;
+            max-width: 480px;
+            margin-bottom: 12px;
+        }
 
-    .video-backImg {
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-        z-index: 100;
-        position: absolute;
-    }
+        h1 {
+            text-align: center;
+            font-size: clamp(20px, 3.5vw, 32px);
+            margin: 0;
+            color: #111;
+        }
 
-    video {
-        width: 100%;
-        display: block;
-    }
+        /* 边框容器 */
+        .hero {
+            width: 100%;
+            max-width: 480px;
+            position: relative;
+            border-radius: 12px;
+            overflow: hidden;
+            background: url('https://mdn.alipayobjects.com/huamei_mrdrkc/afts/img/6kwRR7bdM38AAAAAQ_AAAAgADnRDAQFr/original') no-repeat center;
+            background-size: contain;
+            /* 保持边框图片完整比例 */
+            box-shadow: 0 6px 20px rgba(11, 20, 40, 0.06);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 12px;
+            /* 边框厚度，可调整 */
+            box-sizing: border-box;
+        }
 
-    .controls {
-        position: absolute;
-        bottom: 10px;
-        left: 0;
-        right: 0;
-        display: flex;
-        align-items: center;
-        gap: 10px;
-        padding: 5px 10px;
-        background: rgba(0, 0, 0, 0.4);
-        border-radius: 6px;
-    }
+        /* 视频容器 */
+        .video-wrap {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
-    button {
-        background: none;
-        border: 0;
-        color: white;
-        font-size: 18px;
-        cursor: pointer;
-    }
+        /* 视频本身 */
+        .video-wrap video {
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: contain;
+            /* 保持视频完整显示 */
+            border-radius: 8px;
+            /* 视频圆角略小于边框 */
+            display: block;
+        }
 
-    input[type="range"] {
-        flex: 1;
-    }
-</style>
+        .content {
+            max-width: 480px;
+            width: 100%;
+            padding: 16px;
+        }
 
-<div class="main-container">
-    <h1>hello test 22:20</h1>
-    <div class="background-container">
-        <div class="video-backImg"></div>
-        <div class="video-container">
-            <video id="myVideo" playsinline webkit-playsinline autoplay loop
+        .desc {
+            margin: 0 0 12px;
+            color: #333;
+            line-height: 1.6;
+        }
+
+        .actions {
+            display: flex;
+            gap: 10px;
+        }
+
+        .btn {
+            padding: 10px 14px;
+            border-radius: 8px;
+            border: none;
+            font-weight: 600;
+            cursor: pointer;
+        }
+
+        .btn.primary {
+            background: #0077ff;
+            color: #fff;
+        }
+
+        .btn.ghost {
+            background: transparent;
+            border: 1px solid #ddd;
+        }
+    </style>
+</head>
+
+<body>
+
+    <header>
+        <h1>竖屏 H5 视频示例 - 优化边框 & 安卓循环</h1>
+    </header>
+
+    <section class="hero">
+        <div class="video-wrap">
+            <video id="heroVideo" autoplay muted loop playsinline webkit-playsinline preload="auto"
                 poster="https://mdn.alipayobjects.com/huamei_mrdrkc/afts/img/9ehrQ4G789MAAAAAgBAAAAgADnRDAQFr/original">
-                <source src="https://gw.alipayobjects.com/v/huamei_mrdrkc/afts/video/V5eFTZ0SOvsAAAAAVNAAAAgAfoeUAQBr"
+                <source src="./mixkit-vertical-video-of-a-colorful-performance-of-a-young-asian-51287-hd-ready.mp4"
                     type="video/mp4">
+                您的浏览器不支持 HTML5 视频。
             </video>
         </div>
+    </section>
+
+    <div class="content">
+        <p class="desc">
+            这是一个竖屏视频示例，视频边框优化为完整显示，四周留白自然。静音自动循环播放，兼容 iPhone / Safari / 微信 / 安卓浏览器。
+        </p>
     </div>
 
-</div>
+    <script>
+        (function () {
+            const video = document.getElementById('heroVideo');
 
+            // 安卓 / 部分浏览器 loop 失效时手动重播
+            video.addEventListener('ended', () => {
+                video.currentTime = 0;
+                video.play().catch(() => { });
+            });
 
-<script>
-    const video = document.getElementById("myVideo");
-    const playBtn = document.getElementById("playBtn");
-    const progress = document.getElementById("progress");
-    const volume = document.getElementById("volume");
-    const fullBtn = document.getElementById("fullBtn");
+            // 首次尝试播放
+            video.muted = true;
+            const playPromise = video.play();
+            if (playPromise !== undefined) {
+                playPromise.catch(() => { });
+            }
 
-    // 播放 / 暂停
-    playBtn.addEventListener("click", () => {
-        if (video.paused) {
-            video.play();
-            playBtn.textContent = "❚❚"; // 暂停图标
-        } else {
-            video.pause();
-            playBtn.textContent = "▶︎";
-        }
-    });
+            // 页面切换标签页时暂停节省资源
+            document.addEventListener('visibilitychange', () => {
+                if (document.hidden) video.pause();
+                else video.play().catch(() => { });
+            });
+        })();
+    </script>
 
-    // 更新进度条
-    video.addEventListener("timeupdate", () => {
-        const percent = (video.currentTime / video.duration) * 100;
-        progress.value = percent;
-    });
+</body>
 
-    // 拖动时改变播放进度
-    progress.addEventListener("input", () => {
-        const time = (progress.value / 100) * video.duration;
-        video.currentTime = time;
-    });
-
-    // 音量调节
-    volume.addEventListener("input", () => {
-        video.volume = volume.value;
-    });
-
-    // 全屏
-    fullBtn.addEventListener("click", () => {
-        if (video.requestFullscreen) {
-            video.requestFullscreen();
-        } else if (video.webkitEnterFullscreen) {
-            video.webkitEnterFullscreen(); // iOS
-        }
-    });
-
-</script>
+</html>
